--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "lint": "eslint .",
     "typecheck": "vue-tsc --noEmit"
   },
+  "dependencies": {
+    "@oku-ui/motion-nuxt": "^0.2.0",
+    "@omc-space/api-client": "^0.0.3",
+    "floating-vue": "^5.1.0",
+    "motion": "^10.17.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^2.4.4",
     "@iconify-json/carbon": "^1.1.25",
@@ -31,9 +37,5 @@
     "pinia": "^2.1.7",
     "typescript": "^5.3.3",
     "vue-tsc": "^1.8.25"
-  },
-  "dependencies": {
-    "@omc-space/api-client": "^0.0.3",
-    "floating-vue": "^5.1.0"
   }
 }
