--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@iconify-json/tabler": "^1.1.104",
     "@oku-ui/motion-nuxt": "^0.2.0",
     "@omc-space/api-client": "^0.0.3",
     "floating-vue": "^5.1.0",
