--- a/package.json
+++ b/package.json
@@ -14,11 +14,22 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@bytemd/plugin-gemoji": "^1.21.0",
+    "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/plugin-highlight-ssr": "^1.21.0",
+    "@bytemd/plugin-math": "^1.21.0",
+    "@bytemd/plugin-medium-zoom": "^1.21.0",
+    "@bytemd/vue-next": "^1.21.0",
     "@iconify-json/tabler": "^1.1.104",
+    "@jsdevtools/rehype-toc": "^3.0.2",
     "@oku-ui/motion-nuxt": "^0.2.0",
     "@omc-space/api-client": "^0.0.4",
+    "@uvdream/bytemd-plugin-code-copy": "^0.1.0",
     "floating-vue": "^5.1.0",
-    "motion": "^10.17.0"
+    "motion": "^10.17.0",
+    "rehype-figure": "^1.0.1",
+    "rehype-image-group": "^1.0.5",
+    "remark-flexible-containers": "^1.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.4.4",
