--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@oku-ui/motion-nuxt": "^0.2.0",
     "@uvdream/bytemd-plugin-code-copy": "^0.1.0",
+    "dayjs": "^1.11.10",
     "floating-vue": "^5.1.0",
     "motion": "^10.17.0",
     "rehype-figure": "^1.0.1",
