--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.12.0",
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
     "build": "nuxi build",
     "dev:pwa": "VITE_PLUGIN_PWA=true nuxi dev",
@@ -21,12 +21,12 @@
     "@bytemd/plugin-math": "^1.21.0",
     "@bytemd/plugin-medium-zoom": "^1.21.0",
     "@bytemd/vue-next": "^1.21.0",
-    "@iconify-json/tabler": "^1.1.104",
+    "@iconify-json/tabler": "^1.1.106",
     "@jsdevtools/rehype-toc": "^3.0.2",
-    "@oku-ui/motion-nuxt": "^0.2.0",
+    "@oku-ui/motion-nuxt": "^0.2.1",
     "@uvdream/bytemd-plugin-code-copy": "^0.1.0",
     "dayjs": "^1.11.10",
-    "floating-vue": "^5.1.0",
+    "floating-vue": "^5.2.2",
     "js-md5": "^0.8.3",
     "motion": "^10.17.0",
     "rehype-figure": "^1.0.1",
@@ -34,22 +34,22 @@
     "remark-flexible-containers": "^1.1.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.4.4",
-    "@iconify-json/carbon": "^1.1.25",
-    "@iconify-json/twemoji": "^1.1.14",
+    "@antfu/eslint-config": "^2.8.0",
+    "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/twemoji": "^1.1.15",
     "@nuxtjs/color-mode": "^3.3.2",
     "@pinia/nuxt": "^0.5.1",
-    "@unocss/eslint-config": "^0.58.0",
-    "@unocss/nuxt": "^0.58.0",
-    "@vite-pwa/nuxt": "^0.3.5",
-    "@vueuse/nuxt": "^10.7.0",
+    "@unocss/eslint-config": "^0.58.5",
+    "@unocss/nuxt": "^0.58.5",
+    "@vite-pwa/nuxt": "^0.6.0",
+    "@vueuse/nuxt": "^10.9.0",
     "consola": "^3.2.3",
-    "eslint": "npm:eslint-ts-patch@^8.55.0-1",
+    "eslint": "npm:eslint-ts-patch@8.55.0-1",
     "eslint-plugin-format": "^0.1.0",
-    "eslint-ts-patch": "^8.55.0-1",
-    "nuxt": "^3.8.2",
+    "eslint-ts-patch": "8.55.0-1",
+    "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
-    "typescript": "^5.3.3",
-    "vue-tsc": "^1.8.25"
+    "typescript": "^5.4.2",
+    "vue-tsc": "^2.0.5"
   }
 }
