--- a/env/.env.prod
+++ b/env/.env.prod
@@ -1,3 +1,3 @@
 # 请求接口地址
 VITE_REQUEST_BASE_URL = 'https://api.dvaren.xyz/api/v1'
-VITE_REQUEST_BASE_URL_SERVER = 'http://127.0.0.1:2333/api/v1'
+VITE_REQUEST_BASE_URL_SERVER = 'https://api.dvaren.xyz/api/v1'
