--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node .output/server/index.mjs",
     "start:generate": "npx serve .output/public",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
@@ -34,16 +35,18 @@
     "remark-flexible-containers": "^1.2.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.11.6",
+    "@antfu/eslint-config": "^2.15.0",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/twemoji": "^1.1.15",
     "@nuxtjs/color-mode": "^3.3.3",
     "@pinia/nuxt": "^0.5.1",
     "@unocss/eslint-config": "^0.58.8",
+    "@unocss/eslint-plugin": "^0.59.3",
     "@unocss/nuxt": "^0.58.8",
     "@vueuse/nuxt": "^10.9.0",
     "consola": "^3.2.3",
-    "eslint-plugin-format": "^0.1.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-format": "^0.1.1",
     "eslint-ts-patch": "8.55.0-1",
     "nuxt": "^3.11.1",
     "pinia": "^2.1.7",
